--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,16 @@
     android:background="#eeeeee"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/btnStartGame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/start"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutWholeQuestion"
         android:layout_width="0dp"
@@ -14,6 +24,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -49,7 +60,9 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layoutQuestion"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toStartOf="@+id/textView"
+                app:layout_constraintStart_toStartOf="@+id/textView">
 
                 <TextView
                     android:id="@+id/textView"
@@ -73,7 +86,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:fontFamily="casual"
-                    android:gravity="center_vertical"
+                    android:gravity="center_horizontal"
                     android:maxLength="80"
                     android:minLines="2"
                     android:paddingStart="16sp"
@@ -110,7 +123,7 @@
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="16dp"
                     android:fontFamily="casual"
-                    android:gravity="top"
+                    android:gravity="center_horizontal|top"
                     android:minLines="2"
                     android:paddingStart="16sp"
                     android:paddingEnd="16sp"
